--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,14 @@ server: true # runs a local server
 paginate: 10 # pagination basted on number of posts
 exclude: ["Gemfile", "Gemfile.lock", "README.md", 'sass', 'watch.sh', 'style.scss'] # files to exclude
 
+title: '눈 썹 달 :: crescent moon'
+tagline: 'for VIXX HYUK'
+url: https://crescentmoon705.github.io/
+
+author:
+name: '눈 썹 달'
+
+paginate: 5
+
+github:
+repo: https://github.com/crescentmoon705/crescentmoon705/github.io
