--- a/_config.yml
+++ b/_config.yml
@@ -2,17 +2,9 @@
 
 auto: true # automatically update your jekyll
 server: true # runs a local server
-paginate: 10 # pagination basted on number of posts
+paginate: 5 # pagination basted on number of posts
 exclude: ["Gemfile", "Gemfile.lock", "README.md", 'sass', 'watch.sh', 'style.scss'] # files to exclude
 
-title: '눈 썹 달 :: crescent moon'
-tagline: 'for VIXX HYUK'
-url: https://crescentmoon705.github.io/
-
-author:
-name: '눈 썹 달'
-
-paginate: 5
-
-github:
-repo: https://github.com/crescentmoon705/crescentmoon705/github.io
+title: 눈 썹 달 :: crescent moon for VIXX HYUK
+baseurl: ""
+email: crescent.moon.0705@gmail.com
